Fix dark mode for workboard card edit button background
Summary:
Replace hardcoded white background color for the Edit button of a project workboard card (shown when hovering over the card) with variable `{$page.content}` as `CelerityDefaultPostprocessor.php` also defines `'page.content' => '#fff'`.

Refs T15056

Test Plan:
* Go http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to a workboard of a project and hover over a card in a column
* Look at the Edit button in the upper right corner of the card

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26143

--- a/webroot/rsrc/css/phui/workboards/phui-workcard.css
+++ b/webroot/rsrc/css/phui/workboards/phui-workcard.css
@@ -71,7 +71,7 @@
 
 .device-desktop .phui-workcard.phui-oi:hover
   .phui-list-item-href {
-    background: #fff;
+    background: {$page.content};
     opacity: .7;
 }
 
